[package]
name = "bevy_superjumper"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.17.3"
rand = "0.8.5"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Optimize release for size
[profile.release]
opt-level = 'z'
